Gradle config updated

--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,22 @@
 buildscript {
-  repositories {
-    mavenLocal()
-    ["releases", "public"].each { r ->
-      maven {
-        url "${nexusBaseUrl}/repositories/${r}"
-        credentials {
-          username nexusUserName
-          password nexusPassword
+    repositories {
+        mavenLocal()
+        ["releases", "public"].each { r ->
+            maven {
+                url "${nexusBaseUrl}/repositories/${r}"
+                credentials {
+                    username nexusUserName
+                    password nexusPassword
+                }
+            }
         }
-      }
     }
-  }
 
-  dependencies {
-    classpath "com.xebialabs.gradle.plugins:gradle-xl-plugins-plugin:${xlPluginsPluginVersion}"
-    classpath 'com.moowork.gradle:gradle-node-plugin:1.1.1'
-    classpath 'com.xebialabs.gradle.plugins:gradle-xl-taskgraph-plugin:0.2.0'
-  }
+    dependencies {
+        classpath "com.xebialabs.gradle.plugins:gradle-xl-plugins-plugin:${xlPluginsPluginVersion}"
+        classpath 'com.moowork.gradle:gradle-node-plugin:1.1.1'
+        classpath 'com.xebialabs.gradle.plugins:gradle-xl-taskgraph-plugin:0.2.0'
+    }
 }
 
 import java.nio.file.Paths
@@ -32,39 +32,40 @@ apply plugin: 'idea'
 apply plugin: 'com.moowork.gulp'
 
 group = "com.xebialabs.deployit.plugins"
-archivesBaseName = "xld-ts-explorer"
-
-//project.tasks.getByName("createPluginVersionProperties").configure { plugin = archivesBaseName }
 
 yarn_install {
-  args = ['--mutex', 'network']
+    args = ['--mutex', 'network']
 }
 
 jar {
-  exclude 'web/fonts'
-  exclude 'web/images'
-  exclude 'web/libs'
-  exclude 'web/web-src'
+    exclude 'web/fonts'
+    exclude 'web/images'
+    exclude 'web/libs'
+    exclude 'web/web-src'
 }
 
 task createBuildDir << {
-  if (!buildDir.exists()) {
-    buildDir.mkdir()
-  }
+    if (!buildDir.exists()) {
+        buildDir.mkdir()
+    }
 }
 
+task distribution(type: Zip, dependsOn: build) {
+    from 'build/libs'
+    extension 'xldp'
+}
 
 build.mustRunAfter clean
 tasks['release'].mustRunAfter build
 
 node {
-  version = '7.10.0'
-  yarnVersion = '0.27.5'
-  download = true
+    version = '7.10.0'
+    yarnVersion = '0.27.5'
+    download = true
 }
 
 idea {
-  module {
-    excludeDirs += file('node_modules')
-  }
+    module {
+        excludeDirs += file('node_modules')
+    }
 }
