--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bs-glamour": "0.1.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "reason-react": ">=0.2.2"
+    "reason-react": ">=0.2.2",
+    "ts-explorer": "0.0.3"
   },
   "devDependencies": {
     "bs-platform": "^1.8.0",
