--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-version = '1.0.6'
+version = '1.0.7'
 
 buildscript {
     repositories {
@@ -47,7 +47,7 @@ jar {
 
 build.mustRunAfter clean
 
-task gulpCopy(type: GulpTask) {
+task gulpCopy(type: GulpTask, dependsOn: [yarn_install]) {
     args = ["copy"]
 }
 
@@ -68,7 +68,7 @@ task writeNewPom {
 build.dependsOn(writeNewPom)
 
 node {
-    version = '8.3.0'
+    version = '8.4.0'
     yarnVersion = '0.27.5'
     download = true
 }
