--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xld-ts-explorer",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "XLD UI Type System explorer Plugin",
   "main": "index.js",
   "keywords": [
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "gulp": "3.9.1",
-    "gulp-copy": "1.0.0"
+    "gulp-copy": "1.0.0",
+    "gulp-release-it": "1.1.14"
   }
 }
