--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xld-ts-explorer",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "description": "XLD UI Type System explorer Plugin",
   "main": "index.js",
   "keywords": [
@@ -16,6 +16,7 @@
   "devDependencies": {
     "gulp": "3.9.1",
     "gulp-copy": "1.1.0",
-    "gulp-release-it": "1.1.14"
+    "gulp-release-it": "1.1.14",
+    "rimraf": "2.6.2"
   }
 }
