--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "type-system-explorer": "0.0.9"
   },
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-preset-env": "1.6.1",
     "biguint-format": "1.0.0",
     "flake-idgen": "1.1.0",
-    "gulp": "3.9.1",
+    "gulp": "4.0.0",
     "gulp-copy": "1.1.0",
-    "gulp-release-it": "1.1.14",
+    "gulp-release-it": "2.0.14",
     "html-template-tag": "2.0.0",
     "mustache": "2.3.0",
     "rimraf": "2.6.2"
